# treesitter-mcp

./: FEATURES.md  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  MCP_USAGE.md
src/mcp_server/: server.py
src/mcp_server/core/: analyzer.py  language_manager.py  models.py
src/treesitter_mcp/: cli.py  server.py
src/treesitter_mcp/core/: analyzer.py  language_manager.py  models.py
src/treesitter_mcp/languages/: cpp.py
