[project]
name = "treesitter-mcp"
version = "0.1.0"
description = "MCP server for code analysis using Tree-sitter"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "tree-sitter>=0.22.0",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-python",
    "pydantic",
]

[project.scripts]
treesitter-mcp-server = "treesitter_mcp.server:main"
treesitter-mcp = "treesitter_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treesitter_mcp"]
